--- a/docs/LD-002.md
+++ b/docs/LD-002.md
@@ -5,6 +5,8 @@
 **Designation:** "The Divine"  
 **Clearance Level:** DIVIDE Level 5+ Required for Full Access  
 
+![Doro Image](https://x.com/lucas_devil2/status/1920141246720323851/photo/1)
+
 ## Overview:
 Subject LD-002, known as Doro, is an origin-class anomaly within the D.I.V.I.D.E. facility. [REDACTED] suggests Doro’s nature transcends that of normal entities contained within D.I.V.I.D.E., though full documentation is severely limited due to her unpredictable [DATA EXPUNGED].
 
