--- a/docs/LD-002.md
+++ b/docs/LD-002.md
@@ -14,6 +14,8 @@ Doro’s presence has resulted in significant temporal and dimensional disruptio
 
 Her connection to LD-001 (“The Chained One”) suggests a higher, more complex [REDACTED] that binds them both together, though the full nature of this link remains [DATA EXPUNGED].
 
+LD-002 has multiple form her agressive forms witch was caught on camera or her normal calm form where she appears as a cute pet or a plushie more forms are highly likely.
+
 ## Notes:
 Subject Doro’s powers have been recorded to do the following:
 
