--- a/docs/LD-002.md
+++ b/docs/LD-002.md
@@ -16,6 +16,10 @@ Her connection to LD-001 (“The Chained One”) suggests a higher, more complex
 
 LD-002 has multiple form her agressive forms witch was caught on camera or her normal calm form where she appears as a cute pet or a plushie more forms are highly likely.
 
+When LD-002 warped her body into a realistic one from her "drawn" version she instantly went on the offensive and devoured [REDACTED] captain of [REDACTED] than went instantly back to her cartoon form.
+
+LD-002 does not need to eat at all or drink there seem to be no needs for her survival other than entertainment.
+
 ## Notes:
 Subject Doro’s powers have been recorded to do the following:
 
