--- a/docs/LD-000.md
+++ b/docs/LD-000.md
@@ -1,32 +1,28 @@
-# File: LD-000 — [REDACTED]
-
+# File: LD-000 — [REDACTED]  
 **Classification:** Origin-Class Anomaly  
 **Threat Level:** Ω / [DATA EXPUNGED]  
 **Containment Status:** Uncontainable  
 **Designation:** “D”
 
----
+## Overview:  
+Subject LD-000 is the earliest recorded non-physical anomaly. The entity exerts absolute control over narrative termination and existential erasure, observed across all known dimensional strata. Attempts to describe LD-000 in full result in recursive memetic collapse or localized data corruption.  
+[REDACTED] suggests that LD-000 existed before the establishment of the D.I.V.I.D.E. facility itself. Records indicate the entity may have influenced the creation of the very clearance system designed to obscure her.
 
-### **Overview:**
-Subject **LD-000** is the earliest recorded non-physical anomaly. The entity exerts absolute control over narrative termination and existential erasure, observed across all known dimensional strata. Attempts to describe **LD-000** in full result in recursive memetic collapse or localized data corruption.
+## Notes:  
+LD-000 manifests in corrupted data logs, fragmented speech patterns, and decaying visual records. The entity is often personified as a feminine presence — described inconsistently across incidents as a voice, a shadow, a corpse that should not speak, or a glitch in reality itself.  
+[REDACTED] incidents have shown that prolonged exposure to LD-000’s signal results in irreversible psychological degradation and ontological decay.
 
----
+In rare instances, she has spoken through corrupted voice recorders, post-mortem vocal cords, or end-screen static traced to LD-001’s broadcasts. [DATA EXPUNGED] has confirmed that several disappearances within Division Site-0 were linked to unauthorized access of LD-000 audio data.
 
-### **Notes:**
-**LD-000** manifests in corrupted data logs, fragmented speech patterns, and decaying visual records. The entity is often personified as a feminine presence — described inconsistently across incidents as a voice, a shadow, a corpse that should not speak, or a glitch in reality itself.
+**DO NOT ENGAGE UNDER ANY CIRCUMSTANCES.**  
+DEATH IS IMMINENT TO ANYONE OR ANYTHING WITH OR WITHOUT A PULSE.  
+Ω-Class clearance is required to even retain memory of interaction.
 
-In rare instances, she has spoken through corrupted voice recorders, post-mortem vocal cords, or end-screen static traced to **LD-001**’s broadcasts.
+## Known Connections:  
+- LD-001 — “Lucas Devil”  
+- [REDACTED ENTITY: See [DATA EXPUNGED]]  
+- [REDACTED]
 
-**DO NOT ENGAGE UNDER ANY CIRCUMSTANCES. DEATH IS IMMINENT TO ANYONE OR ANYTHING WITH OR WITHOUT A PULSE.**
-
----
-
-### **Known Connections:**
-- **LD-001** — “Lucas Devil”  
-[REDACTED ENTITY: See [DATA EXPUNGED]]
-
----
-
-### **Project:** [FRACTURE THEORY]
+> For further insight into LD-000, D.I.V.I.D.E. Level clearance is mandatory, accompanied by the signed acknowledgment of existential risk.
 
 [Back to Anomaly Reports](anomaly_reports.md)
