--- a/docs/LD-001.md
+++ b/docs/LD-001.md
@@ -3,6 +3,7 @@
 **Threat Level:** [DATA EXPUNGED]  
 **Containment Status:** Uncontainable  
 **Designation:** “The Chained One”
+**Clearance Level:** DIVIDE Level 6+ Required for Full Access  
 
 ## Overview:  
 Subject LD-001 is the central anomaly within the D.I.V.I.D.E. narrative. It is directly linked to memory manipulation, reality warping, and narrative control. LD-001 is considered the anchor to all other anomalies, providing both cohesion and chaos across the dimensional fractures. Attempts to document LD-001’s full nature are met with heavy narrative distortions, rendering most information inherently unreliable.
