--- a/docs/LD-000.md
+++ b/docs/LD-000.md
@@ -3,6 +3,7 @@
 **Threat Level:** Ω / [DATA EXPUNGED]  
 **Containment Status:** Uncontainable  
 **Designation:** “D”
+**Clearance Level:** D.I.V.I.D.E. Level Required for Full Access  
 
 ## Overview:  
 Subject LD-000 is the earliest recorded non-physical anomaly. The entity exerts absolute control over narrative termination and existential erasure, observed across all known dimensional strata. Attempts to describe LD-000 in full result in recursive memetic collapse or localized data corruption.  
