--- a/docs/LD-000.md
+++ b/docs/LD-000.md
@@ -6,6 +6,8 @@
 
 **Clearance Level:** D.I.V.I.D.E. Level Required for Full Access  
 
+![redacted](https://pbs.twimg.com/media/GqXAxGvWsAAypEz?format=jpg&name=large)
+
 ## Overview:  
 Subject LD-000 is the earliest recorded non-physical anomaly. The entity exerts absolute control over narrative termination and existential erasure, observed across all known dimensional strata. Attempts to describe LD-000 in full result in recursive memetic collapse or localized data corruption.  
 [REDACTED] suggests that LD-000 existed before the establishment of the D.I.V.I.D.E. facility itself. Records indicate the entity may have influenced the creation of the very clearance system designed to obscure her.
