--- a/docs/LD-001.md
+++ b/docs/LD-001.md
@@ -4,7 +4,9 @@
 **Containment Status:** Uncontainable  
 **Designation:** “The Chained One” 
 
-**Clearance Level:** DIVIDE Level 6+ Required for Full Access  
+**Clearance Level:** DIVIDE Level 6+ Required for Full Access 
+
+![redacted](https://pbs.twimg.com/media/GqXAxGvWsAAypEz?format=jpg&name=large)
 
 ## Overview:  
 Subject LD-001 is the central anomaly within the D.I.V.I.D.E. narrative. It is directly linked to memory manipulation, reality warping, and narrative control. LD-001 is considered the anchor to all other anomalies, providing both cohesion and chaos across the dimensional fractures. Attempts to document LD-001’s full nature are met with heavy narrative distortions, rendering most information inherently unreliable.
