--- a/docs/LD-003.md
+++ b/docs/LD-003.md
@@ -1,1 +1,41 @@
+**File:** LD-003 – “The Drowned Girl”  
+**Classification:** Vengeance-Class Anomaly  
+**Threat Level:** Medium  
+**Containment Status:** Limited Range / Naturally Isolated  
+**Clearance Level:** DIVIDE Level 3+ Required for Full Access  
+
+---
+
+**Overview:**  
+LD-003 is a humanoid aquatic anomaly resembling a young, long-haired female. It remains fully submerged in any body of water it inhabits. The entity cannot leave water-based zones and exhibits a range limit of approximately 500 meters from its origin point.
+
+---
+
+**Behavioral Traits:**  
+In its dormant state, LD-003 drifts at the bottom of still water, showing no signs of hostility unless a qualifying target is present. Activation occurs when any individual with a recorded or suspected history of **sexual violence or abuse** enters her proximity.
+
+Once triggered, LD-003 initiates violent environmental changes. Water levels rise abruptly, even within sealed or elevated environments, often flooding entire structures. The target is then **drowned and strangled** with disproportionate strength. Upon neutralization, LD-003 retreats into the nearest liquid source, and all water dissipates without residue.
+
+LD-003 cannot teleport, but can phase through internal plumbing, connected piping, or linked water structures **only during active pursuit**. During these events, she can reach speeds of up to **110 km/h**, though acceleration to this speed is gradual.
+
+---
+
+**Manifestation Reports:**  
+- **Incident 003-Δ:** Security logs captured LD-003 flooding a secure sublevel corridor to reach an inmate with sealed offense records.  
+- **Incident 003-Ψ:** Containment cell found fully submerged. Forensic review revealed previously hidden misconduct by deceased staff member. No survivors.
+
+---
+
+**Notes:**  
+LD-003 does not interact with individuals lacking qualifying behavioral history unless physically provoked or restrained. Extraction attempts have failed — the entity becomes incorporeal outside liquid mediums.
+
+> _“She doesn’t hunt. She waits. And the guilty always swim.”_  
+> – Statement recovered from D.I.V.I.D.E. Level 3 clearance holder after Incident 003-Δ.
+
+---
+
+**Containment Suggestions:**  
+No active containment necessary due to range limitations.  
+**Strict clearance vetting** is required before entry into any water-occupied area within a 500-meter radius of LD-003’s known location.  
+**Personnel with any history of sexual misconduct are permanently barred from proximity.**
 
