--- a/docs/LD-003.md
+++ b/docs/LD-003.md
@@ -30,7 +30,7 @@ LD-003 cannot teleport, but can phase through internal plumbing, connected pipin
 LD-003 does not interact with individuals lacking qualifying behavioral history unless physically provoked or restrained. Extraction attempts have failed — the entity becomes incorporeal outside liquid mediums.
 
 > _“She doesn’t hunt. She waits. And the guilty always swim.”_  
-> – Statement recovered from D.I.V.I.D.E. Level 3 clearance holder after Incident 003-Δ.
+> – Statement recovered from D.I.V.I.D.E. Level clearance holder after Incident 003-Δ.
 
 ---
 
