--- a/docs/LD-003.md
+++ b/docs/LD-003.md
@@ -4,6 +4,8 @@
 **Containment Status:** Limited Range / Naturally Isolated  
 **Clearance Level:** DIVIDE Level 3+ Required for Full Access  
 
+![The Drowned Girl](https://pbs.twimg.com/media/GqXUyRZWAAAkBIg?format=jpg&name=large)
+
 ---
 
 **Overview:**  
