--- a/docs/LD-003.md
+++ b/docs/LD-003.md
@@ -4,7 +4,7 @@
 **Containment Status:** Limited Range / Naturally Isolated  
 **Clearance Level:** DIVIDE Level 3+ Required for Full Access  
 
-![The Drowned Girl](https://pbs.twimg.com/media/GqXUyRZWAAAkBIg?format=jpg&name=large)
+![The Drowned Girl](https://pbs.twimg.com/media/GqXWb6YXQAAKTnN?format=jpg&name=medium)
 
 ---
 
