--- a/docs/LD-003.md
+++ b/docs/LD-003.md
@@ -1,6 +1,6 @@
 **File:** LD-003 – “The Drowned Girl”  
 **Classification:** Vengeance-Class Anomaly  
-**Threat Level:** Medium  
+**Threat Level:** Class II 
 **Containment Status:** Limited Range / Naturally Isolated  
 **Clearance Level:** DIVIDE Level 3+ Required for Full Access  
 
