--- a/docs/LD-004.md
+++ b/docs/LD-004.md
@@ -2,7 +2,7 @@
 
 **Designation:** Human-Pig Hybrid Anomaly  
 **Clearance:** Level 3+  
-**Threat Level:** Class II  
+**Threat Level:** Class I (When enraged considered Class II)  
 **Nickname:** "The Swine Hybrid" / "The Misfit"
 
 ---
