--- a/docs/LD-004.md
+++ b/docs/LD-004.md
@@ -5,6 +5,8 @@
 **Threat Level:** Class I (When enraged considered Class II)  
 **Nickname:** "The Swine Hybrid" / "The Misfit"
 
+![Camera Feed: LD-004 — The Swine Hybrid](https://pbs.twimg.com/media/Gqi5W3ZXoAA2IS_?format=jpg&name=large)
+
 ---
 
 #### **Description**  
