--- a/docs/LD-005.md
+++ b/docs/LD-005.md
@@ -1,1 +1,38 @@
+### **LD-006 — "The Hollow Plaything"**
 
+**Designation:** Synthetic Toy Hybrid Entity  
+**Clearance:** Level 3+  
+**Threat Level:** Class II (When provoked, considered Class III)  
+**Nickname:** "The Hollow Plaything" 
+
+---
+
+#### **Description**  
+LD-005, also known as *The Hollow Plaything*, is a horrific amalgamation of animatronic and organic components, resembling a twisted parody of a children's toy. Discovered within the ruins of a defunct amusement park, the entity appears to be a poorly constructed attempt at creating a "living" toy. Standing approximately 8 feet tall, it has the body of a puppet, with lifeless eyes that give the illusion of animation. Its movements are jerky, with mechanical joints making loud, unnerving creaking sounds as it lumbers forward.  
+
+The creature's design is flawed—its face is stretched into a grotesque, distorted smile, with hollow eye sockets that send chills down the spine of anyone who dares look into them. It was originally intended to be a form of entertainment, a "companion" for children, but the failed project led to the creature's abandonment in the ruins of the park, where it has since become a malevolent force, roaming aimlessly through its decaying surroundings.
+
+---
+
+#### **Duties**  
+- LD-005 must be contained in a high-security holding chamber with soundproofing to minimize its ability to influence the environment.  
+- Personnel are to avoid direct interaction and only engage through surveillance methods.  
+- Psychological monitoring is required, as the creature may begin to exhibit new, unpredicted behaviors under certain conditions.
+
+---
+
+#### **Behavioral Traits**  
+- **Disorienting Presence:** LD-005 emits an aura that induces a sense of unease, causing hallucinations of moving toys and distorted sounds.  
+- **Mimicry:** It has the ability to mimic the voices of children, often attempting to lure victims into its proximity by calling out or imitating familiar sounds.  
+- **Instinctive Aggression:** When threatened, LD-005 becomes highly aggressive, using its mechanical limbs to strike at perceived intruders.
+
+---
+
+#### **Containment Protocol**  
+LD-006 should be confined to a reinforced, isolated chamber, equipped with high-intensity lighting to prevent it from fully accessing the shadows. The chamber must also be soundproofed to prevent its mimicry abilities from luring unsuspecting personnel into its reach. Emergency light flashes may be employed to disorient the entity in case of a breach, but the risk of harm is still high due to its unpredictability.
+
+---
+
+#### **Internal Quote**  
+> "This thing was never meant to exist. It's a twisted version of innocence, and that’s why we have to keep it contained."  
+> "I sometimes wonder what could’ve been if the park had succeeded... but that’s a question we’ll never have the answer to. It’s better left forgotten."
