--- a/docs/LD-005.md
+++ b/docs/LD-005.md
@@ -5,12 +5,16 @@
 **Threat Level:** Class II (When provoked, considered Class III)  
 **Nickname:** "The Hollow Plaything" 
 
+
+![Camera Feed: LD-005 — The Plaything](https://pbs.twimg.com/media/Gqohsd7XoAA_I9L?format=jpg&name=large)
+
+
 ---
 
 #### **Description**  
 LD-005, also known as *The Hollow Plaything*, is a horrific amalgamation of animatronic and organic components, resembling a twisted parody of a children's toy. Discovered within the ruins of a defunct amusement park, the entity appears to be a poorly constructed attempt at creating a "living" toy. Standing approximately 8 feet tall, it has the body of a puppet, with lifeless eyes that give the illusion of animation. Its movements are jerky, with mechanical joints making loud, unnerving creaking sounds as it lumbers forward.  
 
-The creature's design is flawed—its face is stretched into a grotesque, distorted smile, with hollow eye sockets that send chills down the spine of anyone who dares look into them. It was originally intended to be a form of entertainment, a "companion" for children, but the failed project led to the creature's abandonment in the ruins of the park, where it has since become a malevolent force, roaming aimlessly through its decaying surroundings.
+The creature's design is flawed—its face is stretched into a grotesque, distorted smile, with hollow eye sockets that send chills down the spine of anyone who dares look into them. It was originally intended to be a form of entertainment, a "companion" for children, as of now it appeared in REDACTED at REDACTED we did not find out about this anomaly for some time making it difficult to know how many people it might have killed lucky it seems only 4 it was found in an abandoned factory and stayed there.
 
 ---
 
