--- a/docs/LD-005.md
+++ b/docs/LD-005.md
@@ -2,7 +2,7 @@
 
 **Designation:** Synthetic Toy Hybrid Entity  
 **Clearance:** Level 3+  
-**Threat Level:** Class II (When provoked, considered Class III)  
+**Threat Level:** Class III   
 **Nickname:** "The Hollow Plaything" 
 
 
