--- a/docs/LD-004.md
+++ b/docs/LD-004.md
@@ -1,10 +1,10 @@
 ### **LD-004 — "The Swine Hybrid"**
 
-## Designation: Human-Pig Hybrid Anomaly  
-## Threat Level: Class I (When enraged, considered Class II)  
-## Containment Status: Fully Contained / Passive Monitoring  
-## Clearance Level: DIVIDE Level 2+ Required for Full Access  
-## Nickname: “The Swine Hybrid” / “The Misfit”  
+#### Designation: Human-Pig Hybrid Anomaly  
+#### Threat Level: Class I (When enraged, considered Class II)  
+#### Containment Status: Fully Contained / Passive Monitoring  
+#### Clearance Level: DIVIDE Level 2+ Required for Full Access  
+#### Nickname: “The Swine Hybrid” / “The Misfit”  
 
 ![Camera Feed: LD-004 — The Swine Hybrid](https://pbs.twimg.com/media/Gqi5W3ZXoAA2IS_?format=jpg&name=large)
 
