--- a/docs/LD-005.md
+++ b/docs/LD-005.md
@@ -1,9 +1,11 @@
 ### **LD-005 — "The Hollow Plaything"**
 
-**Designation:** Synthetic Toy Hybrid Entity  
-**Clearance:** Level 3+  
-**Threat Level:** Class III   
-**Nickname:** "The Hollow Plaything" 
+**Designation**: Synthetic Toy Hybrid Entity 
+**Classification**: Puppet-Class Anomaly 
+**Threat Level**: Class III (When provoked, considered Class IV) 
+**Containment Status**: Secured / Soundproofed Chamber 
+**Clearance Level**: DIVIDE Level 3+ Required for Full Access 
+**Nickname**: “The Hollow Plaything”  
 
 
 ![Camera Feed: LD-005 — The Plaything](https://pbs.twimg.com/media/Gqohsd7XoAA_I9L?format=jpg&name=large)
