--- a/docs/LD-006.md
+++ b/docs/LD-006.md
@@ -29,15 +29,15 @@ The device does not lie but will refuse to answer direct threats to its internal
 
 “I cannot say.”
 
-**Behavioral Traits**
-Reactive Intelligence: Appears to possess personality-adjacent logic. Will sometimes phrase answers in cryptic or poetic ways.
+**Behavioral Traits**  
+**Reactive Intelligence**: Appears to possess personality-adjacent logic. Will sometimes phrase answers in cryptic or poetic ways.
 
 **Failsafe Mechanism**: Unauthorized or dangerous inquiries result in immediate system shutdown followed by a month-long blue screen.
 
 **Non-Replication**: Attempts to copy or clone the software, hardware, or interface have all failed. Even photographing the screen causes complete data wipe.
 
 **Containment Protocol**
-LD-006 is to be stored at Site-9, within a sealed isolation chamber equipped with EMP failsafes. Only Division 4+ personnel with specialized cognitive clearance may interact with the terminal, and only via pre-approved questioning scripts.
+LD-006 is to be stored at REDACTED, within a sealed isolation chamber equipped with EMP failsafes. Only Division 4+ personnel with specialized cognitive clearance may interact with the terminal, and only via pre-approved questioning scripts.
 
 Any attempts to ask questions outside of approved boundaries will result in automatic lockdown and psychological evaluation of the operator.
 
