--- a/docs/LD-006.md
+++ b/docs/LD-006.md
@@ -4,6 +4,10 @@
 **Containment Status**: Stationary / Site-Sealed  
 **Clearance Level**: DIVIDE Level 4+ Required for Full Access  
 
+![LD-006 — Civilian Photo](https://pbs.twimg.com/media/GqrpXf9XwAAAF8w?format=jpg&name=large)
+“Photo taken via standard issue phone during initial encounter.”
+
+
 **Description**
 LD-006, referred to as “The Oracle Terminal,” is a modified pre-2000s laptop of unknown origin. The object was discovered in the early days of the anomaly outbreak and was responsible for initiating the first recorded instance of anomalous information transfer. Despite heavy wear, its screen glows faintly at all times. No known power source has been found, and the device is permanently locked to a command-line style interface.
 
