--- a/docs/LD-006.md
+++ b/docs/LD-006.md
@@ -1,6 +1,6 @@
 **File**: LD-006 — “The Oracle Terminal”  
 **Classification**: Cognition-Class Anomaly  
-**Threat Level**: Class 1 (Non-hostile, informational risk)  
+**Threat Level**: Class I (Non-hostile, informational risk)  
 **Containment Status**: Stationary / Site-Sealed  
 **Clearance Level**: DIVIDE Level 4+ Required for Full Access  
 
