--- a/docs/LD-007.md
+++ b/docs/LD-007.md
@@ -1,4 +1,4 @@
-**File**: LD-007** — “The Visitor’s Folklore”
+**File**: LD-007 — “The Visitor’s Folklore”
 **Designation**: Humanoid Entity Bound to Anomalous Children’s Book
 **Threat Level**: Class I (Avoidance Recommended)
 **Containment Status**: Object-Based Dormancy / Manual Activation Required
