--- a/docs/LD-007.md
+++ b/docs/LD-007.md
@@ -1,6 +1,6 @@
 **File**: LD-007 — “The Visitor’s Folklore”  
 **Designation**: Humanoid Entity Bound to Anomalous Children’s Book  
-**Threat Level**: Class I (Avoidance Recommended)  
+**Threat Level**: Class II (Avoidance Recommended)  
 **Containment Status**: Object-Based Dormancy / Manual Activation Required  
 **Clearance Level**: DIVIDE Level 3+ Required for Full Access  
 
