--- a/docs/LD-008.md
+++ b/docs/LD-008.md
@@ -13,7 +13,7 @@ The entity only becomes active under specific conditions — namely low ambient 
 
 Its vocal systems are not consistent with modern animatronic designs. LD-008 has been recorded mimicking the voices of children and adults in ways that match the speech patterns of deceased individuals — many of whom are not listed in any known personnel or civilian registries.
 
-Efforts to dismantle or destroy LD-008 have all failed. Attempts at incineration, crushing, or disassembly result in temporary dormancy, followed by spontaneous reassembly over a period of several days.
+Efforts to dismantle or destroy LD-008 have been deemed viable. While attempts at incineration, crushing, or disassembly result in only temporary dormancy, the entity exhibits a form of self-reconstruction, utilizing nearby mechanical components to regenerate missing or damaged parts over several days. However, it has been confirmed that LD-008 can be permanently neutralized using sustained fire from armor-piercing ammunition.  
 
 **Behavioral Traits**  
 Activates only in low-light + interference-rich conditions
