--- a/docs/LD-008.md
+++ b/docs/LD-008.md
@@ -6,7 +6,7 @@
 
 
 ![LD-008 – “Laughtrack”](https://pbs.twimg.com/media/GqwtrA1W0AE7AI_?format=png&name=900x900)
-
+“Photo taken via standard issue phone.”
 
 **Description**  
 LD-008, referred to internally as “Laughtrack,” is a humanoid animatronic clown of unknown origin, discovered standing upright and powered down in the center of an abandoned field at [REDACTED], with no apparent transportation or mechanical infrastructure nearby. The entity bears a strong resemblance to entertainment mascots used in mid-20th century children's venues, though no verifiable record of its franchise — Jolly Jamboree — exists in any database.
