--- a/docs/LD-007.md
+++ b/docs/LD-007.md
@@ -4,7 +4,8 @@
 **Containment Status**: Object-Based Dormancy / Manual Activation Required  
 **Clearance Level**: DIVIDE Level 3+ Required for Full Access  
 
-![LD-007 – “The Visitor’s Folklore”](https://pbs.twimg.com/media/GqwYRhCXUAAB2vQ?format=jpg&name=large)
+![LD-007 – “The Visitor’s Folklore”](https://pbs.twimg.com/media/GqwYRhCXUAAB2vQ?format=jpg&name=large)  
+“Photo taken via standard issue bodycam.”
 
 **Description**  
 LD-007 is a humanoid entity only known to manifest after direct interaction with a worn, leather-bound children's book referred to as “The Visitor’s Folklore.” The book appears hand-illustrated and written in a cryptic rhyme structure. Once a subject reads the book aloud to completion, the anomaly becomes active.
