--- a/docs/LD-000.md
+++ b/docs/LD-000.md
@@ -30,3 +30,6 @@ DEATH IS IMMINENT TO ANYONE OR ANYTHING WITH OR WITHOUT A PULSE.
 > For further insight into LD-000, D.I.V.I.D.E. Level clearance is mandatory, accompanied by the signed acknowledgment of existential risk.
 
 [Back to Anomaly Reports](anomaly_reports.md)
+
+© 2025 Lucas Devil. All Rights Reserved.
+D.I.V.I.D.E.™ and all related characters, storylines, and assets are original creations of Lucas Devil.
