--- a/docs/LD-001.md
+++ b/docs/LD-001.md
@@ -31,3 +31,7 @@ LD-001 has been observed to manipulate the flow of time, events, and even percep
 For further information on LD-001 and related anomalies, DIVIDE Level 6 clearance is required, with the recommendation of a D.I.V.I.D.E. Level Clearance Holder.
 
 [Back to Anomaly Reports](anomaly_reports.md)
+
+
+© 2025 Lucas Devil. All Rights Reserved.
+D.I.V.I.D.E.™ and all related characters, storylines, and assets are original creations of Lucas Devil.
