--- a/docs/LD-002.md
+++ b/docs/LD-002.md
@@ -44,3 +44,8 @@ Doro’s connection to LD-001 remains an enigma. While [REDACTED] hints at some 
 For further information on LD-002 and related anomalies, DIVIDE Level 6 clearance is required, with the [DATA EXPUNGED] recommendation of a D.I.V.I.D.E. Level Clearance Holder.
 
 [Back to Anomaly Reports](#)
+
+
+
+© 2025 Lucas Devil. All Rights Reserved.
+D.I.V.I.D.E.™ and all related characters, storylines, and assets are original creations of Lucas Devil.
