--- a/docs/LD-003.md
+++ b/docs/LD-003.md
@@ -41,3 +41,8 @@ No active containment necessary due to range limitations.
 **Strict clearance vetting** is required before entry into any water-occupied area within a 500-meter radius of LD-003’s known location.  
 **Personnel with any history of sexual misconduct are permanently barred from proximity.**
 
+
+
+
+© 2025 Lucas Devil. All Rights Reserved.
+D.I.V.I.D.E.™ and all related characters, storylines, and assets are original creations of Lucas Devil.
