--- a/docs/LD-005.md
+++ b/docs/LD-005.md
@@ -42,3 +42,11 @@ LD-005 should be confined to a reinforced, isolated chamber, equipped with high-
 #### **Internal Quote**  
 > "This thing was never meant to exist. It's a twisted version of innocence, and that’s why we have to keep it contained."  
 > "I sometimes wonder what could’ve been if the park had succeeded... but that’s a question we’ll never have the answer to. It’s better left forgotten."
+
+
+
+
+
+
+© 2025 Lucas Devil. All Rights Reserved.
+D.I.V.I.D.E.™ and all related characters, storylines, and assets are original creations of Lucas Devil.
