--- a/docs/LD-007.md
+++ b/docs/LD-007.md
@@ -38,3 +38,10 @@ Personnel who accidentally trigger the anomaly are to be placed under temporary 
 
 Destruction of the book is under ethical review. Attempts to incinerate or shred the object have resulted in [REDACTED].
 
+
+
+
+
+
+© 2025 Lucas Devil. All Rights Reserved.
+D.I.V.I.D.E.™ and all related characters, storylines, and assets are original creations of Lucas Devil.
