--- a/docs/LD-008.md
+++ b/docs/LD-008.md
@@ -42,3 +42,10 @@ Playback of any vintage children's music near the entity is strictly forbidden.
 **Internal Notes**  
 “It didn’t bring a building with it. No wiring. No tracks. No memory.”
 “It was just standing there... waiting for a show that ended decades ago.”
+
+
+
+
+
+© 2025 Lucas Devil. All Rights Reserved.
+D.I.V.I.D.E.™ and all related characters, storylines, and assets are original creations of Lucas Devil.
