--- a/docs/LD-000.md
+++ b/docs/LD-000.md
@@ -31,5 +31,6 @@ DEATH IS IMMINENT TO ANYONE OR ANYTHING WITH OR WITHOUT A PULSE.
 
 [Back to Anomaly Reports](anomaly_reports.md)
 
-© 2025 Lucas Devil. All Rights Reserved.
-D.I.V.I.D.E.™ and all related characters, storylines, and assets are original creations of Lucas Devil.
+© 2025 Lucas Devil. All Rights Reserved.  
+D.I.V.I.D.E.™ and all related characters, storylines, and assets are original creations of Lucas Devil.  
+First created: 2025-05-07  
