--- a/docs/LD-001.md
+++ b/docs/LD-001.md
@@ -33,5 +33,6 @@ For further information on LD-001 and related anomalies, DIVIDE Level 6 clearanc
 [Back to Anomaly Reports](anomaly_reports.md)
 
 
-© 2025 Lucas Devil. All Rights Reserved.
-D.I.V.I.D.E.™ and all related characters, storylines, and assets are original creations of Lucas Devil.
+© 2025 Lucas Devil. All Rights Reserved.  
+D.I.V.I.D.E.™ and all related characters, storylines, and assets are original creations of Lucas Devil.  
+First created: 2025-05-07  
