--- a/docs/LD-009.md
+++ b/docs/LD-009.md
@@ -50,7 +50,7 @@ Elevator cannot be opened to save said AT-class a new clean and empty elevator w
 Once inside, you must complete a cycle to escape
 
 **Containment Protocol**   
-LD-009 has been relocated to DIVIDE Sector-07, sealed in a 10-meter reinforced chamber monitored 24/7. It is to remain powered down unless specifically authorized by a Level 4+ researcher.
+LD-009 has been relocated to DIVIDE Sector-07, sealed in a 10-meter reinforced chamber monitored 24/7. It is to remain sealed off unless specifically authorized by a Level 3+ researcher.
 
 Under no circumstances are personnel allowed to enter without clearance and real-time biometric monitoring. All expeditions must consist of AT-Class subjects with biometric tags and remote kill switches.
 
