--- a/docs/LD-009.md
+++ b/docs/LD-009.md
@@ -23,7 +23,7 @@ Floor ██: A sealed industrial chamber filled with radioactive waste. Fatal w
 
 Floor ██: A pristine white room containing only a suspended black gravitational anomaly. Victims were violently pulled inside upon entry.
 
-Floor 4: A lone locked door. No markings. No response. Subject moved on.
+Floor ██ (Tag read "Floor 4"): A lone locked door with no markings or interface. Subject reported no audible or visible response to interaction attempts and proceeded to the next floor.
 
 Floor ██: A vast, endless cubicle space, populated with dozens of surviving AT-Class subjects. They subsist on self-replenishing water and nutrient packs. No exit has been located.
 
