--- a/docs/LD-009.md
+++ b/docs/LD-009.md
@@ -54,9 +54,21 @@ LD-009 has been relocated to DIVIDE Sector-07, sealed in a 10-meter reinforced c
 
 Under no circumstances are personnel allowed to enter without clearance and real-time biometric monitoring. All expeditions must consist of AT-Class subjects with biometric tags and remote kill switches.
 
-Any breach or reappearance of floors in the real world is to be considered a full S-class priority containment breach.
+Any breach or reappearance of floors in the real world is to be considered a full S-class priority containment breach.  
+
+Each AT-class is gona be fitted with a body camera from this point on.  
 
 **Internal Note**   
 “It’s not a machine. It’s a test.”
 
 “The elevator doesn’t go down. It goes in.”
+
+
+
+
+
+
+
+
+
+© 2025 Lucas Devil. All Rights Reserved. D.I.V.I.D.E.™ and all related characters, storylines, and assets are original creations of Lucas Devil. First created: 2025-05-07
