--- a/docs/LD-009.md
+++ b/docs/LD-009.md
@@ -31,7 +31,7 @@ Floor ██: A butcher’s room, drenched in blood. Subject extracted a key fro
 
 Floor ██: A hostile encampment of worn, half-mad AT-Class survivors. They attempted to kill the subject to take his place in the elevator. He retaliated, maiming two, and escaped.
 
-Floor ██: [REDACTED]. The entire chamber existed mid-air, with no visible walls or supports. [REDACTED] may have been present, though confirmation is pending.
+Floor ██: [REDACTED]. The entire chamber existed mid-air, with no visible walls or supports. [REDACTED] may have been present, though confirmation is pending. If confirmed threat level is to be raised to class IV.
 
 The total number of unique floors is unknown. Some appear sentient or reactive to the subject’s mental state.
 
