--- a/docs/LD-009.md
+++ b/docs/LD-009.md
@@ -7,7 +7,7 @@
 
 ![LD-009 — “The Endless Lift”](https://pbs.twimg.com/media/GrOxfRpXwAAgWPP?format=jpg&name=large)
 
-*Image captured during early reconnaissance. Source: DIVIDE drone footage.*
+"*Image captured during early reconnaissance. Source: DIVIDE drone footage.*"
 
 **Description**     
 LD-009 is a rusted, outdated elevator of unknown origin discovered in an unmarked region far outside populated zones. The structure was free-standing, with no attached building or foundation. The interior appears normal but functions as a dimensional transit system, offering access to an unknown number of alternate floors—each serving as a self-contained reality or containment space.
