--- a/docs/LD-009.md
+++ b/docs/LD-009.md
@@ -10,9 +10,9 @@
 "*Image captured during early reconnaissance. Source: DIVIDE drone footage.*"
 
 **Description**     
-LD-009 is a rusted, outdated elevator of unknown origin discovered in an unmarked region far outside populated zones. The structure was free-standing, with no attached building or foundation. The interior appears normal but functions as a dimensional transit system, offering access to an unknown number of alternate floors—each serving as a self-contained reality or containment space.
+LD-009 is a rusted, outdated elevator of unknown origin discovered in an unmarked region far outside populated zones. The structure was free-standing, with no attached building or foundation. The interior appears normal but functions as a dimensional transit system, offering access to an unknown number of alternate floors—each serving as a self-contained reality or containment space.  
 
-Once entered, the elevator closes and begins cycling through floors autonomously. There are no mechanical buttons inside. The anomaly is not limited by traditional physics or floor count. Escape is statistically improbable.
+The anomaly is not limited by traditional physics or floor count. Escape is statistically improbable.
 
 **Recorded survival rate**:   
 ☑️ 1 in 118,469 AT-Class test subjects have successfully exited.
